Few fixes. In particular, parents are now visible on the filter page.

--- a/src/site/static/less/page.less
+++ b/src/site/static/less/page.less
@@ -159,9 +159,13 @@
 }
 
 .tag {
+	display: inline-block;
 	margin: 10px 5px 0 0;
-	font-size: 12px;
+	font-size: 13px;
 	background-color: #aaa;
+	max-width: 300px;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .embedded-page {
